implement booking confirmation email feature with nodemailer and HTML template

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,10 @@ DB_PORT=3306
 
 # JWT secret key
 JWT_SECRET=mySuperSecretKey123!@123
+
+# Email configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=no.reply.mediapp.78@gmail.com
+EMAIL_PASS=hckfnggyfbqwmrik
+EMAIL_FROM=no.reply.mediapp.78@gmail.com
