add Cloudinary image upload functionality with multer integration

--- a/backend/.env
+++ b/backend/.env
@@ -14,3 +14,8 @@ EMAIL_PORT=587
 EMAIL_USER=no.reply.mediapp.78@gmail.com
 EMAIL_PASS=hckfnggyfbqwmrik
 EMAIL_FROM=no.reply.mediapp.78@gmail.com
+
+# Cloudinary configuration
+CLOUDINARY_CLOUD_NAME=dlpcwx94i
+CLOUDINARY_API_KEY=564737281495212
+CLOUDINARY_API_SECRET=SHpByL1Re8QVkZqw60DwoppjhWE
