Enhance Doctors page with specialist categories and search functionality; add loading state and improve UI elements

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
+# Database configuration
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
 DB_NAME=medi_plus
 DB_PORT=3306
-
 
 # JWT secret key
 JWT_SECRET=mySuperSecretKey123!@123
@@ -19,3 +19,8 @@ EMAIL_FROM=no.reply.mediapp.78@gmail.com
 CLOUDINARY_CLOUD_NAME=dlpcwx94i
 CLOUDINARY_API_KEY=564737281495212
 CLOUDINARY_API_SECRET=SHpByL1Re8QVkZqw60DwoppjhWE
+
+# Admin credentials
+ADMIN_EMAIL=sangeethgeeth74@gmail.com
+ADMIN_USERNAME=admin_medi_plus
+ADMIN_PASSWORD=admin123
