Refactor Cloudinary URL handling; update to use environment variables for dynamic URL generation in document management and appointment pages

--- a/backend/.env
+++ b/backend/.env
@@ -19,6 +19,7 @@ EMAIL_FROM=no.reply.mediapp.78@gmail.com
 CLOUDINARY_CLOUD_NAME=dlpcwx94i
 CLOUDINARY_API_KEY=564737281495212
 CLOUDINARY_API_SECRET=SHpByL1Re8QVkZqw60DwoppjhWE
+CLOUDINARY_BASE_URL=https://res.cloudinary.com/dlpcwx94i/image/upload/v1758033628
 
 # Admin credentials
 ADMIN_EMAIL=sangeethgeeth74@gmail.com
